update ./src & ./__tests__

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "??????????????????????????????????????????",
+  "description": "Utility can be used to find the difference between two files. Acceptable file format: .json, .yml.",
   "type": "module",
   "main": "src/index.js",
   "bin": {
